--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="alert alert-danger" role="alert">
                     Some fields are missing
                 </div>
-                <form class="needs-validation" novalidate>
+                <form class="needs-validation" >
                     <!-- Sección superior del formulario -->
                     <div class="row g-3">
                         <div class="col-md-8">
